# dma-api

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/dma/: box.rs  mod.rs  slice.rs  vec.rs
src/dma/alloc/: box.rs  mod.rs  pool.rs  vec.rs
src/osal/: aarch64.rs  mod.rs  nop.rs
tests/: test.rs
