[package]
name = "dma-api"
version = "0.3.0"
edition = "2021"
authors = ["周睿 <zrufo747@outlook.com>"]
repository = "https://github.com/ZR233/dma-api"
license = "MIT"
description = "Trait for DMA alloc and some collections"
keywords = ["os", "dma"]
categories = ["embedded", "no-std"]

[features]
alloc = []

[dependencies]


[[test]]
name = "test"
path = "tests/test.rs"
required-features = ["alloc"]
